# tinysparql

./: .gitignore  .gitmodules  configure.ac
data/dbus/: Makefile.am
data/gschemas/: org.freedesktop.Tracker.Miner.Files.gschema.xml.in
data/ontologies/: Makefile.am
examples/rss-reader/: main.py
rpm/: 0001-Always-insert-timestamps-into-the-database-as-string.patch  0002-portal-Allow-D-Bus-activation-only-through-systemd.patch  001-Tracker-config-overrides.patch  001-install-the-data-generation-scripts.patch  0017-Identify-mounts-that-can-t-be-linked-to-a-volume-as-.patch  002-Fix-CLEANFILE-for-automake.patch  002-allow-skip-reset-prompt.patch  003-Add-Systemd-service-to-DBUS.patch  003-Disable-trackertestutils.patch  003-Tracker-config-overrides.patch  004-Tracker-config-overrides.patch  004-tracker-Remove-nfo-language-and-fix-libmediaart-call.patch  005-Bugfix-for-GB740920-ensure-sourceiri-is-filled-in-on.patch  006-Bugfix-for-GB740920-ensure-sourceiri-is-filled-in-on.patch  006-trackerlibav-get-metadata-from-audio-stream-instead-.patch  007-tracker-Drop-15gstreamerguessrule-Fixes-JB37082.patch  007-trackerlibav-get-metadata-from-audio-stream-instead-.patch  008-tracker-Fix-flac-tag-extraction-Fixes-JB35939.patch  008-trackerlibav-check-format-metadata-for-tags-and-fall.patch  009-tracker-Add-album-art-extraction-for-libav-and-flac-.patch  010-tracker-Fix-flac-tag-extraction-Fixes-JB35939.patch  010-tracker-Use-Xing-mp3-header-when-available-Fixes-JB3.patch  011-revert-libmediaart-disable.patch  011-tracker-Fix-memory-leak-trackerextractlibav-Fixes-JB.patch  012-disable-tracker-remote.patch  012-tracker-Add-album-art-extraction-for-libav-and-flac-.patch  013-miner-Fix-mining-of-files-whose-data-was-inserted-by.patch  013-tracker-Use-Xing-mp3-header-when-available-Fixes-JB3.patch  014-fix-systemd-unit-files.patch  014-tracker-FLAC-metadata-iterator-wasnt-closed-Fixes-ME.patch  015-allow-skip-reset-prompt.patch  015-tracker-Remove-nfo-language-and-fix-libmediaart-call.patch  016-Disable-libtracker-sparql-parallel-build.patch  017-libtracker-data-Fix-build-with-Vala-0.43.patch  018-Use-date-instead-of-creationtime-for-ffmpeg-.patch  10-rtf.rule  Nemo-ontology-for-isMediaArt-annotation.patch  miner-Fix-mining-of-files-whose-data-was-inserted-by.patch  remove-tracker2-db.sh  tinysparql.spec  (+11 more)
src/libtracker-extract/: tracker-module-manager.c
src/libtracker-miner/: tracker-decorator.c  (+1 more)
tracker/: .gitignore  configure.ac
tracker/utils/playlists/: Makefile.am
utils/data-generators/cc/: Makefile.am
(+95 files in other folders)
